--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@keyv/redis": "1.3.8",
     "@next/swc-linux-x64-gnu": "https://vercel-packages.vercel.app/next/commits/2b1ce0837ed1a077659b34a8d699f700e63c8c49/@next/swc-linux-x64-gnu",
+    "@node-rs/bcrypt": "^1.10.5",
     "keyv": "^3.1.0",
     "next": "https://vercel-packages.vercel.app/next/commits/2b1ce0837ed1a077659b34a8d699f700e63c8c49/next",
-    "react": "19.0.0-rc-cd22717c-20241013",
+    "react": "19.0.0-rc-65a56d0e-20241020",
     "react-countup": "^6.5.3",
-    "react-dom": "19.0.0-rc-cd22717c-20241013"
+    "react-dom": "19.0.0-rc-65a56d0e-20241020"
   },
   "devDependencies": {
     "@types/keyv": "3.1.0",
