--- a/package.json
+++ b/package.json
@@ -1,30 +1,4 @@
 {
-  "name": "example-turbopack-build",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@keyv/redis": "1.3.8",
-    "@next/swc-linux-x64-gnu": "https://vercel-packages.vercel.app/next/commits/4e5660c20196a53fc9e1b5b2f60c667d60793b8d/@next/swc-linux-x64-gnu",
-    "@node-rs/bcrypt": "^1.10.5",
-    "keyv": "^3.1.0",
-    "next": "https://vercel-packages.vercel.app/next/commits/4e5660c20196a53fc9e1b5b2f60c667d60793b8d/next",
-    "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-countup": "^6.5.3",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020"
-  },
-  "devDependencies": {
-    "@types/keyv": "3.1.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "monorepo",
+    "private": true
 }
