--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@keyv/redis": "1.3.8",
     "@node-rs/bcrypt": "^1.10.5",
+    "@vercel/functions": "^1.5.0",
     "ai": "^3.4.22",
     "keyv": "^3.1.0",
     "next": "15.0.2-canary.3",
